--- a/Css/Widescreen.css
+++ b/Css/Widescreen.css
@@ -17,6 +17,9 @@
         position: fixed;
         top: 0;
     }
+    .dropdown{
+        display: none;
+    }
     a {
         font-size: 1.5rem;
         text-decoration: none;
@@ -87,10 +90,12 @@
         background-image: url(/SuperComp/inv.jpg);
         background-size: 100%;
         background-position: center;
+        background-repeat: no-repeat;
         height: 15rem;
         padding: 5rem;
         text-align: center;
         width: 50%;
+        background-size: cover;
     }
     .part1 button{
         border: none;
@@ -108,10 +113,12 @@
         background-image: url(/SuperComp/tax3.jpg);
         background-size: 100%;
         background-position: center;
+        background-repeat: no-repeat;
         text-align: center;
         height: 15rem;
         padding: 5rem;
         width: 50%;
+        background-size: cover;
     }
     .part2 button{
         border: none;
@@ -173,7 +180,7 @@
         width: 100%;
     }
     /* Contact */
-    .contact{
+    .contactw{
         padding-left: 1rem;
         margin-top: 1rem;
         width: 49%;
@@ -217,22 +224,33 @@
         display: block;
         margin-top: 1rem;
         margin: auto;
+        width: 20%;
     }
-    .mapframe{
-        width: 50%;
-        position: relative;
-    }
-    .map{
+    .mapframew{
         width: 49%;
-        display: block;
+        position: relative;
+        float: right;
+    }
+    .mapw{
+        width: 100%;
         position: absolute;
         margin-left: 0.75%;
         margin-top: 1rem;
         height: 34.5rem;
     }
-    #delta{
+    #deltaw{
         display: flex;
         max-width: 100%;
+    }
+    /* Contact Mobile */
+    #delta{
+        display: none;
+    }
+    .mapframe{
+        display: none;
+    }
+    .map{
+        display: none;
     }
     /* Bottom Bar */
     #eta{
